sc-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: sc-user-service
  labels:
    v: sc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: sc-user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sc-user
  template:
    metadata:
      labels:
        app: sc-user
        v: sc
    spec:
      containers:
        - name: sc-user
          image: <IMAGE>
          imagePullPolicy: Always
          command: [ "node" ]
          args: [ "server.js" ]
          ports:
          - containerPort: 3000
