sc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /sc-user
        backend:
          serviceName: sc-user-service
          servicePort: 80
      - path: /sc-auth
        backend:
          serviceName: sc-auth-service
          servicePort: 80
      - path: /sc-swagger
        backend:
          serviceName: sc-swagger-service
          servicePort: 80
